@@ -1,3 +1,8 @@
+#ifndef RENDERER_H
+#define RENDERER_H
+
+#include "microui.h"
+
 void r_init(void);
 void r_draw_rect(mu_Rect rect, mu_Color color);
 void r_draw_text(const char *text, mu_Vec2 pos, mu_Color color);
@@ -9,3 +14,5 @@ void r_clear(mu_Color color);
 void r_present(void);
 
 void r_handle_input(mu_Context *ctx);
+#endif
+
